RESOLVED FIXED216812
paper.io ad close buttons cannot be iteracted with via trackpad on iPad
https://bugs.webkit.org/show_bug.cgi?id=216812
Summary paper.io ad close buttons cannot be iteracted with via trackpad on iPad
Tim Horton
Reported 2020-09-21 19:59:13 PDT
paper.io ad close buttons cannot be iteracted with via trackpad on iPad
Attachments
Patch (3.65 KB, patch)
2020-09-21 20:00 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-09-21 20:00:26 PDT
EWS
Comment 2 2020-09-21 21:44:52 PDT
Committed r267394: <https://trac.webkit.org/changeset/267394> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409346 [details].
Radar WebKit Bug Importer
Comment 3 2020-09-21 21:45:23 PDT
Note You need to log in before you can comment on or make changes to this bug.